# rle

./: CHANGELOG.md  README.md  rle.cabal
src/: CompressedSeq.hs  Compression.hs  Interval.hs  MultiCompress.hs  RLE.hs  RLESequence.hs  Uncompressed.hs
test/: Main.hs
