cabal-version:      2.4
name:               rle
version:            0.1.0.0
author:             Chris Smith
maintainer:         cdsmith@gmail.com

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Compression, CompressedSeq, RLE, Interval
    build-depends:    base, fingertree, containers, deriving-compat
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs

    build-depends:    base, rle, hspec
    hs-source-dirs:   test
    default-language: Haskell2010
